--- a/www/index.html
+++ b/www/index.html
@@ -5,25 +5,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
   <script src="components/loader.js"></script>
-  <script src="lib/onsenui/js/onsenui.min.js"></script>
+  <script src="lib/jquery-3.5.1.min.js"></script>
+  <script src="components/plugins.js"></script>
+
+  <!--- MAPQUEST --->
+  <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css"/>
 
   <link rel="stylesheet" href="components/loader.css">
-  <link rel="stylesheet" href="lib/onsenui/css/onsenui.css">
-  <link rel="stylesheet" href="lib/onsenui/css/onsen-css-components.css">
+  <link rel="stylesheet" href="lib/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
-
-  <script>
-    ons.ready(function() {
-      console.log("Onsen UI is ready!");
-    });
-
-    if (ons.platform.isIPhoneX()) {
-      document.documentElement.setAttribute('onsflag-iphonex-portrait', '');
-      document.documentElement.setAttribute('onsflag-iphonex-landscape', '');
-    }
-  </script>
 </head>
 <body>
-  This is a template for Onsen UI app.
+<div class="container"> 
+  <div class="col-sm">
+    <h3> Plugins </h3>
+  </div>
+  <div class="row">
+    <div class="col-sm">
+      <button class="btn btn-danger btn-block" id="Alerta">
+      Alerta!
+    </button>
+    </div>
+    <div class="col-sm">
+      <button class="btn btn-danger btn-block" id="confirm">
+      Opções
+    </button>
+    </div>
+     <div class="col-sm">
+      <button class="btn btn-danger btn-block" id="beep">
+      Beep
+    </button>
+    </div>
+    <div class="col-sm">
+      <button class="btn btn-danger btn-block" id="vibrar">
+      Vibração
+    </button>
+    </div>
+     <div class="col-sm">
+      <button class="btn btn-danger btn-block" id="local">
+      Local
+    </button>
+    </div>
+    <div class="col-sm">
+      <div class="map" id="map">
+
+      </div>
+    </button>
+    </div>
+
+</div>
 </body>
 </html>
